--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,14 +1,44 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="6decaa">  <td>23/01/19 13:41:40</td>   <td>0</td> <td title="&gt;&gt;SanityTestCases.setUp()[pri:0, instance:com.pwc.productcentral.SanityTestCases@3dedb4a6]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@640070680</td>   <td></td> </tr>
-<tr bgcolor="6decaa">  <td>23/01/19 13:42:06</td>   <td>25804</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SanityTestCases.closeTabs()[pri:0, instance:com.pwc.productcentral.SanityTestCases@3dedb4a6]">&lt;&lt;closeTabs</td> 
+<tr bgcolor="6decaa">  <td>23/01/19 15:52:16</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SanityTestCases.closeTabs()[pri:0, instance:com.pwc.productcentral.SanityTestCases@3dedb4a6]">&lt;&lt;closeTabs</td> 
 <td>&nbsp;</td>  <td>main@640070680</td>   <td></td> </tr>
-<tr bgcolor="6decaa">  <td>23/01/19 13:41:40</td>   <td>229</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SanityTestCases.WEB_58()[pri:0, instance:com.pwc.productcentral.SanityTestCases@3dedb4a6]">WEB_58</td> 
+<tr bgcolor="6decaa">  <td>23/01/19 15:51:54</td>   <td>-22459</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;SanityTestCases.initTest()[pri:0, instance:com.pwc.productcentral.SanityTestCases@3dedb4a6]">&gt;&gt;initTest</td> 
+<td>&nbsp;</td>  <td>main@640070680</td>   <td></td> </tr>
+<tr bgcolor="6decaa">  <td>23/01/19 15:52:16</td>   <td>22</td> <td title="&lt;&lt;SanityTestCases.closingBrowser()[pri:0, instance:com.pwc.productcentral.SanityTestCases@3dedb4a6]">&lt;&lt;closingBrowser</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@640070680</td>   <td></td> </tr>
+<tr bgcolor="6decaa">  <td>23/01/19 15:51:54</td>   <td>-22459</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;SanityTestCases.initTest()[pri:0, instance:com.pwc.productcentral.SanityTestCases@3dedb4a6]">&gt;&gt;initTest</td> 
+<td>&nbsp;</td>  <td>main@640070680</td>   <td></td> </tr>
+<tr bgcolor="6decaa">  <td>23/01/19 15:51:10</td>   <td>-66026</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SanityTestCases.WEB_77()[pri:0, instance:com.pwc.productcentral.SanityTestCases@3dedb4a6]">WEB_77</td> 
   <td>main@640070680</td>   <td></td> </tr>
-<tr bgcolor="6decaa">  <td>23/01/19 13:42:06</td>   <td>25900</td> <td title="&lt;&lt;SanityTestCases.closingBrowser()[pri:0, instance:com.pwc.productcentral.SanityTestCases@3dedb4a6]">&lt;&lt;closingBrowser</td> 
+<tr bgcolor="6decaa">  <td>23/01/19 15:51:08</td>   <td>-68341</td> <td title="&gt;&gt;SanityTestCases.setUp()[pri:0, instance:com.pwc.productcentral.SanityTestCases@3dedb4a6]">&gt;&gt;setUp</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@640070680</td>   <td></td> </tr>
-<tr bgcolor="6decaa">  <td>23/01/19 13:41:40</td>   <td>107</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;SanityTestCases.initTest()[pri:0, instance:com.pwc.productcentral.SanityTestCases@3dedb4a6]">&gt;&gt;initTest</td> 
+<tr bgcolor="6decaa">  <td>23/01/19 15:51:10</td>   <td>-66379</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SanityTestCases.WEB_3()[pri:0, instance:com.pwc.productcentral.SanityTestCases@3dedb4a6]">WEB_3</td> 
+  <td>main@640070680</td>   <td></td> </tr>
+<tr bgcolor="6decaa">  <td>23/01/19 15:52:16</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SanityTestCases.closeTabs()[pri:0, instance:com.pwc.productcentral.SanityTestCases@3dedb4a6]">&lt;&lt;closeTabs</td> 
 <td>&nbsp;</td>  <td>main@640070680</td>   <td></td> </tr>
+<tr bgcolor="6decaa">  <td>23/01/19 15:51:42</td>   <td>-34538</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SanityTestCases.WEB_78()[pri:0, instance:com.pwc.productcentral.SanityTestCases@3dedb4a6]">WEB_78</td> 
+  <td>main@640070680</td>   <td></td> </tr>
+<tr bgcolor="6decaa">  <td>23/01/19 15:52:16</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SanityTestCases.closeTabs()[pri:0, instance:com.pwc.productcentral.SanityTestCases@3dedb4a6]">&lt;&lt;closeTabs</td> 
+<td>&nbsp;</td>  <td>main@640070680</td>   <td></td> </tr>
+<tr bgcolor="6decaa">  <td>23/01/19 15:52:16</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SanityTestCases.closeTabs()[pri:0, instance:com.pwc.productcentral.SanityTestCases@3dedb4a6]">&lt;&lt;closeTabs</td> 
+<td>&nbsp;</td>  <td>main@640070680</td>   <td></td> </tr>
+<tr bgcolor="6decaa">  <td>23/01/19 15:51:54</td>   <td>-22459</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;SanityTestCases.initTest()[pri:0, instance:com.pwc.productcentral.SanityTestCases@3dedb4a6]">&gt;&gt;initTest</td> 
+<td>&nbsp;</td>  <td>main@640070680</td>   <td></td> </tr>
+<tr bgcolor="6decaa">  <td>23/01/19 15:51:54</td>   <td>-22459</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;SanityTestCases.initTest()[pri:0, instance:com.pwc.productcentral.SanityTestCases@3dedb4a6]">&gt;&gt;initTest</td> 
+<td>&nbsp;</td>  <td>main@640070680</td>   <td></td> </tr>
+<tr bgcolor="6decaa">  <td>23/01/19 15:51:54</td>   <td>-22459</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;SanityTestCases.initTest()[pri:0, instance:com.pwc.productcentral.SanityTestCases@3dedb4a6]">&gt;&gt;initTest</td> 
+<td>&nbsp;</td>  <td>main@640070680</td>   <td></td> </tr>
+<tr bgcolor="6decaa">  <td>23/01/19 15:51:54</td>   <td>-22459</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;SanityTestCases.initTest()[pri:0, instance:com.pwc.productcentral.SanityTestCases@3dedb4a6]">&gt;&gt;initTest</td> 
+<td>&nbsp;</td>  <td>main@640070680</td>   <td></td> </tr>
+<tr bgcolor="6decaa">  <td>23/01/19 15:51:08</td>   <td>-67752</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SanityTestCases.WEB_1()[pri:0, instance:com.pwc.productcentral.SanityTestCases@3dedb4a6]">WEB_1</td> 
+  <td>main@640070680</td>   <td></td> </tr>
+<tr bgcolor="6decaa">  <td>23/01/19 15:52:16</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SanityTestCases.closeTabs()[pri:0, instance:com.pwc.productcentral.SanityTestCases@3dedb4a6]">&lt;&lt;closeTabs</td> 
+<td>&nbsp;</td>  <td>main@640070680</td>   <td></td> </tr>
+<tr bgcolor="6decaa">  <td>23/01/19 15:52:16</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SanityTestCases.closeTabs()[pri:0, instance:com.pwc.productcentral.SanityTestCases@3dedb4a6]">&lt;&lt;closeTabs</td> 
+<td>&nbsp;</td>  <td>main@640070680</td>   <td></td> </tr>
+<tr bgcolor="6decaa">  <td>23/01/19 15:51:54</td>   <td>-22413</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SanityTestCases.WEB_79()[pri:0, instance:com.pwc.productcentral.SanityTestCases@3dedb4a6]">WEB_79</td> 
+  <td>main@640070680</td>   <td></td> </tr>
+<tr bgcolor="6decaa">  <td>23/01/19 15:51:09</td>   <td>-66768</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SanityTestCases.WEB_2()[pri:0, instance:com.pwc.productcentral.SanityTestCases@3dedb4a6]">WEB_2</td> 
+  <td>main@640070680</td>   <td></td> </tr>
 </table>
