--- a/Sanity Automation Report for Product Central.html
+++ b/Sanity Automation Report for Product Central.html
@@ -44,7 +44,7 @@
 		<ul id='nav-mobile' class='right hide-on-med-and-down nav-right'>
 			<li>
                 <a href='#!'>
-                    <span class='label suite-start-time blue darken-3'>Jan 25, 2023 11:18:56 AM</span>
+                    <span class='label suite-start-time blue darken-3'>Jan 25, 2023 02:33:54 PM</span>
 				</a>
 			</li>
 			<li>
@@ -155,15 +155,15 @@
 				
 				<li class='test displayed active  pass' status='pass' bdd='false' test-id='1'>
 					<div class='test-heading'>
-						<span class='test-name'>Verify that on selection a result, display the relevant product on the page</span>
-						<span class='test-time'>Jan 25, 2023 11:18:57 AM</span>
+						<span class='test-name'>Verify the doc categories will be based on Taxonomy document</span>
+						<span class='test-time'>Jan 25, 2023 02:33:56 PM</span>
 						<span class='test-status right pass'>pass</span>
 					</div>
 					<div class='test-content hide'>
 <div class='test-time-info'>
-	<span class='label start-time'>Jan 25, 2023 11:18:57 AM</span>
-	<span class='label end-time'>Jan 25, 2023 11:18:57 AM</span>
-	<span class='label time-taken grey lighten-1 white-text'>0h 0m 0s+1ms</span>
+	<span class='label start-time'>Jan 25, 2023 02:33:56 PM</span>
+	<span class='label end-time'>Jan 25, 2023 02:33:56 PM</span>
+	<span class='label time-taken grey lighten-1 white-text'>0h 0m 0s+0ms</span>
 </div>
 	<div class='test-steps'>
 		<table class='bordered table-results'>
@@ -177,8 +177,8 @@
 			<tbody>
 				<tr class='log' status='info'>
 					<td class='status info' title='info' alt='info'><i class='material-icons'>info_outline</i></td>
-					<td class='timestamp'>11:18:57 AM</td>
-					<td class='step-details'>Verified that on selection a result, display the relevant product on the page</td>
+					<td class='timestamp'>2:33:56 PM</td>
+					<td class='step-details'>Verified the doc categories will be based on Taxonomy document</td>
 				</tr>
 			</tbody>
 		</table>
@@ -232,19 +232,19 @@
 			<div class='col s2'>
 				<div class='card-panel r'>
 					Start
-					<div class='panel-lead'>Jan 25, 2023 11:18:56 AM</div>
+					<div class='panel-lead'>Jan 25, 2023 02:33:54 PM</div>
 				</div>
 			</div>
 			<div class='col s2'>
 				<div class='card-panel r'>
 			 		End
-			 		<div class='panel-lead'>Jan 25, 2023 11:18:57 AM</div>
+			 		<div class='panel-lead'>Jan 25, 2023 02:34:16 PM</div>
 				</div>
 			</div>
 			<div class='col s2'>
 				<div class='card-panel r'>
 					Time Taken
-					<div class='panel-lead'>1,701ms</div>
+					<div class='panel-lead'>21,911ms</div>
 				</div>
 			</div>
 		</div>
