--- a/Sanity Automation Report for Product Central.html
+++ b/Sanity Automation Report for Product Central.html
@@ -44,7 +44,7 @@
 		<ul id='nav-mobile' class='right hide-on-med-and-down nav-right'>
 			<li>
                 <a href='#!'>
-                    <span class='label suite-start-time blue darken-3'>Aug 17, 2023 08:28:49 PM</span>
+                    <span class='label suite-start-time blue darken-3'>Aug 17, 2023 10:22:43 PM</span>
 				</a>
 			</li>
 			<li>
@@ -135,10 +135,10 @@
 					<canvas id='child-analysis' width='100' height='80'></canvas>
 				</div>
 				<div class='block text-small'>
-					<span class='tooltipped' data-position='top' data-tooltip='10%'><span class='strong'>1</span> step(s) passed</span>
+					<span class='tooltipped' data-position='top' data-tooltip='50%'><span class='strong'>1</span> step(s) passed</span>
 				</div>
 				<div class='block text-small'>
-					<span class='strong tooltipped' data-position='top' data-tooltip='0%'>0</span> step(s) failed, <span class='strong tooltipped' data-position='top' data-tooltip='90%'>9</span> others
+					<span class='strong tooltipped' data-position='top' data-tooltip='0%'>0</span> step(s) failed, <span class='strong tooltipped' data-position='top' data-tooltip='50%'>1</span> others
 				</div>
 			</div>
 		</div>
@@ -155,15 +155,15 @@
 				
 				<li class='test displayed active  pass' status='pass' bdd='false' test-id='1'>
 					<div class='test-heading'>
-						<span class='test-name'>Verify that by default check box is not ticked and pages are visible</span>
-						<span class='test-time'>Aug 17, 2023 08:28:50 PM</span>
+						<span class='test-name'>Verify user is able to edit products</span>
+						<span class='test-time'>Aug 17, 2023 10:22:44 PM</span>
 						<span class='test-status right pass'>pass</span>
 					</div>
 					<div class='test-content hide'>
 <div class='test-time-info'>
-	<span class='label start-time'>Aug 17, 2023 08:28:50 PM</span>
-	<span class='label end-time'>Aug 17, 2023 08:29:43 PM</span>
-	<span class='label time-taken grey lighten-1 white-text'>0h 0m 53s+247ms</span>
+	<span class='label start-time'>Aug 17, 2023 10:22:44 PM</span>
+	<span class='label end-time'>Aug 17, 2023 10:23:23 PM</span>
+	<span class='label time-taken grey lighten-1 white-text'>0h 0m 39s+812ms</span>
 </div>
 	<div class='test-steps'>
 		<table class='bordered table-results'>
@@ -177,52 +177,12 @@
 			<tbody>
 				<tr class='log' status='info'>
 					<td class='status info' title='info' alt='info'><i class='material-icons'>info_outline</i></td>
-					<td class='timestamp'>8:29:01 PM</td>
+					<td class='timestamp'>10:22:44 PM</td>
 					<td class='step-details'>Wait for the page to load.</td>
-				</tr>
-				<tr class='log' status='info'>
-					<td class='status info' title='info' alt='info'><i class='material-icons'>info_outline</i></td>
-					<td class='timestamp'>8:29:20 PM</td>
-					<td class='step-details'>Click on page info</td>
-				</tr>
-				<tr class='log' status='info'>
-					<td class='status info' title='info' alt='info'><i class='material-icons'>info_outline</i></td>
-					<td class='timestamp'>8:29:21 PM</td>
-					<td class='step-details'>Click on open properties</td>
-				</tr>
-				<tr class='log' status='info'>
-					<td class='status info' title='info' alt='info'><i class='material-icons'>info_outline</i></td>
-					<td class='timestamp'>8:29:29 PM</td>
-					<td class='step-details'>Verified hide listing checkbox not selected</td>
-				</tr>
-				<tr class='log' status='info'>
-					<td class='status info' title='info' alt='info'><i class='material-icons'>info_outline</i></td>
-					<td class='timestamp'>8:29:29 PM</td>
-					<td class='step-details'>Click on save and close</td>
-				</tr>
-				<tr class='log' status='info'>
-					<td class='status info' title='info' alt='info'><i class='material-icons'>info_outline</i></td>
-					<td class='timestamp'>8:29:29 PM</td>
-					<td class='step-details'>Wait for the page to load.</td>
-				</tr>
-				<tr class='log' status='info'>
-					<td class='status info' title='info' alt='info'><i class='material-icons'>info_outline</i></td>
-					<td class='timestamp'>8:29:38 PM</td>
-					<td class='step-details'>Click on preview</td>
-				</tr>
-				<tr class='log' status='info'>
-					<td class='status info' title='info' alt='info'><i class='material-icons'>info_outline</i></td>
-					<td class='timestamp'>8:29:40 PM</td>
-					<td class='step-details'>Switch the iframe</td>
-				</tr>
-				<tr class='log' status='info'>
-					<td class='status info' title='info' alt='info'><i class='material-icons'>info_outline</i></td>
-					<td class='timestamp'>8:29:40 PM</td>
-					<td class='step-details'>Verified 'Download Full Term Link' is displayed</td>
 				</tr>
 				<tr class='log' status='pass'>
 					<td class='status pass' title='pass' alt='pass'><i class='material-icons'>check_circle</i></td>
-					<td class='timestamp'>8:29:43 PM</td>
+					<td class='timestamp'>10:23:23 PM</td>
 					<td class='step-details'>Test passed</td>
 				</tr>
 			</tbody>
@@ -271,25 +231,25 @@
 			<div class='col s2'>
 				<div class='card-panel r'>
 					Steps
-					<div class='panel-lead'>10</div>
+					<div class='panel-lead'>2</div>
 				</div>
 			</div>
 			<div class='col s2'>
 				<div class='card-panel r'>
 					Start
-					<div class='panel-lead'>Aug 17, 2023 08:28:49 PM</div>
+					<div class='panel-lead'>Aug 17, 2023 10:22:43 PM</div>
 				</div>
 			</div>
 			<div class='col s2'>
 				<div class='card-panel r'>
 			 		End
-			 		<div class='panel-lead'>Aug 17, 2023 08:29:43 PM</div>
+			 		<div class='panel-lead'>Aug 17, 2023 10:23:23 PM</div>
 				</div>
 			</div>
 			<div class='col s2'>
 				<div class='card-panel r'>
 					Time Taken
-					<div class='panel-lead'>54,307ms</div>
+					<div class='panel-lead'>40,855ms</div>
 				</div>
 			</div>
 		</div>
@@ -316,7 +276,7 @@
 				errorChild: 0,
 				warningChild: 0,
 				skipChild: 0,
-				infoChild: 9,
+				infoChild: 1,
 				exceptionsChild: 0,
 				
 				passGrandChild: 0,
