--- a/Sanity Automation Report for Product Central.html
+++ b/Sanity Automation Report for Product Central.html
@@ -44,7 +44,7 @@
 		<ul id='nav-mobile' class='right hide-on-med-and-down nav-right'>
 			<li>
                 <a href='#!'>
-                    <span class='label suite-start-time blue darken-3'>Aug 18, 2023 11:35:48 PM</span>
+                    <span class='label suite-start-time blue darken-3'>Aug 31, 2023 06:30:08 PM</span>
 				</a>
 			</li>
 			<li>
@@ -135,10 +135,10 @@
 					<canvas id='child-analysis' width='100' height='80'></canvas>
 				</div>
 				<div class='block text-small'>
-					<span class='tooltipped' data-position='top' data-tooltip='50%'><span class='strong'>1</span> step(s) passed</span>
+					<span class='tooltipped' data-position='top' data-tooltip='7.143%'><span class='strong'>1</span> step(s) passed</span>
 				</div>
 				<div class='block text-small'>
-					<span class='strong tooltipped' data-position='top' data-tooltip='0%'>0</span> step(s) failed, <span class='strong tooltipped' data-position='top' data-tooltip='50%'>1</span> others
+					<span class='strong tooltipped' data-position='top' data-tooltip='0%'>0</span> step(s) failed, <span class='strong tooltipped' data-position='top' data-tooltip='92.857%'>13</span> others
 				</div>
 			</div>
 		</div>
@@ -155,15 +155,15 @@
 				
 				<li class='test displayed active  pass' status='pass' bdd='false' test-id='1'>
 					<div class='test-heading'>
-						<span class='test-name'>Verify user is able to edit products</span>
-						<span class='test-time'>Aug 18, 2023 11:35:49 PM</span>
+						<span class='test-name'>Verify the filter will be a dropdown which will display the My products document categories matching the search results</span>
+						<span class='test-time'>Aug 31, 2023 06:30:09 PM</span>
 						<span class='test-status right pass'>pass</span>
 					</div>
 					<div class='test-content hide'>
 <div class='test-time-info'>
-	<span class='label start-time'>Aug 18, 2023 11:35:49 PM</span>
-	<span class='label end-time'>Aug 18, 2023 11:36:38 PM</span>
-	<span class='label time-taken grey lighten-1 white-text'>0h 0m 48s+892ms</span>
+	<span class='label start-time'>Aug 31, 2023 06:30:09 PM</span>
+	<span class='label end-time'>Aug 31, 2023 06:30:39 PM</span>
+	<span class='label time-taken grey lighten-1 white-text'>0h 0m 29s+838ms</span>
 </div>
 	<div class='test-steps'>
 		<table class='bordered table-results'>
@@ -177,12 +177,72 @@
 			<tbody>
 				<tr class='log' status='info'>
 					<td class='status info' title='info' alt='info'><i class='material-icons'>info_outline</i></td>
-					<td class='timestamp'>11:35:50 PM</td>
+					<td class='timestamp'>6:30:12 PM</td>
 					<td class='step-details'>Wait for the page to load.</td>
+				</tr>
+				<tr class='log' status='info'>
+					<td class='status info' title='info' alt='info'><i class='material-icons'>info_outline</i></td>
+					<td class='timestamp'>6:30:12 PM</td>
+					<td class='step-details'>Clicking on search button</td>
+				</tr>
+				<tr class='log' status='info'>
+					<td class='status info' title='info' alt='info'><i class='material-icons'>info_outline</i></td>
+					<td class='timestamp'>6:30:15 PM</td>
+					<td class='step-details'>Send text on search button</td>
+				</tr>
+				<tr class='log' status='info'>
+					<td class='status info' title='info' alt='info'><i class='material-icons'>info_outline</i></td>
+					<td class='timestamp'>6:30:17 PM</td>
+					<td class='step-details'>Clicking on enter</td>
+				</tr>
+				<tr class='log' status='info'>
+					<td class='status info' title='info' alt='info'><i class='material-icons'>info_outline</i></td>
+					<td class='timestamp'>6:30:21 PM</td>
+					<td class='step-details'>Verified dropdowns</td>
+				</tr>
+				<tr class='log' status='info'>
+					<td class='status info' title='info' alt='info'><i class='material-icons'>info_outline</i></td>
+					<td class='timestamp'>6:30:24 PM</td>
+					<td class='step-details'>Clicking on product dropdown</td>
+				</tr>
+				<tr class='log' status='info'>
+					<td class='status info' title='info' alt='info'><i class='material-icons'>info_outline</i></td>
+					<td class='timestamp'>6:30:24 PM</td>
+					<td class='step-details'>Clicking on checkbox</td>
+				</tr>
+				<tr class='log' status='info'>
+					<td class='status info' title='info' alt='info'><i class='material-icons'>info_outline</i></td>
+					<td class='timestamp'>6:30:33 PM</td>
+					<td class='step-details'>Clicking on category fropdown</td>
+				</tr>
+				<tr class='log' status='info'>
+					<td class='status info' title='info' alt='info'><i class='material-icons'>info_outline</i></td>
+					<td class='timestamp'>6:30:33 PM</td>
+					<td class='step-details'>Clicking on data app checkbox</td>
+				</tr>
+				<tr class='log' status='info'>
+					<td class='status info' title='info' alt='info'><i class='material-icons'>info_outline</i></td>
+					<td class='timestamp'>6:30:37 PM</td>
+					<td class='step-details'>Clicking on documentation checkbox</td>
+				</tr>
+				<tr class='log' status='info'>
+					<td class='status info' title='info' alt='info'><i class='material-icons'>info_outline</i></td>
+					<td class='timestamp'>6:30:37 PM</td>
+					<td class='step-details'>Verified texts are matching on the result table</td>
+				</tr>
+				<tr class='log' status='info'>
+					<td class='status info' title='info' alt='info'><i class='material-icons'>info_outline</i></td>
+					<td class='timestamp'>6:30:37 PM</td>
+					<td class='step-details'>Clicking on data app on result table</td>
+				</tr>
+				<tr class='log' status='info'>
+					<td class='status info' title='info' alt='info'><i class='material-icons'>info_outline</i></td>
+					<td class='timestamp'>6:30:39 PM</td>
+					<td class='step-details'>Verified content pdf is visible</td>
 				</tr>
 				<tr class='log' status='pass'>
 					<td class='status pass' title='pass' alt='pass'><i class='material-icons'>check_circle</i></td>
-					<td class='timestamp'>11:36:38 PM</td>
+					<td class='timestamp'>6:30:39 PM</td>
 					<td class='step-details'>Test passed</td>
 				</tr>
 			</tbody>
@@ -231,25 +291,25 @@
 			<div class='col s2'>
 				<div class='card-panel r'>
 					Steps
-					<div class='panel-lead'>2</div>
+					<div class='panel-lead'>14</div>
 				</div>
 			</div>
 			<div class='col s2'>
 				<div class='card-panel r'>
 					Start
-					<div class='panel-lead'>Aug 18, 2023 11:35:48 PM</div>
+					<div class='panel-lead'>Aug 31, 2023 06:30:08 PM</div>
 				</div>
 			</div>
 			<div class='col s2'>
 				<div class='card-panel r'>
 			 		End
-			 		<div class='panel-lead'>Aug 18, 2023 11:36:38 PM</div>
+			 		<div class='panel-lead'>Aug 31, 2023 06:30:39 PM</div>
 				</div>
 			</div>
 			<div class='col s2'>
 				<div class='card-panel r'>
 					Time Taken
-					<div class='panel-lead'>49,918ms</div>
+					<div class='panel-lead'>30,907ms</div>
 				</div>
 			</div>
 		</div>
@@ -276,7 +336,7 @@
 				errorChild: 0,
 				warningChild: 0,
 				skipChild: 0,
-				infoChild: 1,
+				infoChild: 13,
 				exceptionsChild: 0,
 				
 				passGrandChild: 0,
